# r_audio_nextframe

./: CMakeLists.txt  README.md
include/ffmpeg-n7.1/libavutil/: ffversion.h
lib/: libpostproc.so.58  libpostproc.so.58.3.100  libswresample.so.5.3.100  libswscale.so.8.3.100
lib/pkgconfig/: libavdevice.pc  libavfilter.pc
r_audio_nextframe-master/: .clang-format
src/: AudioProcessor.cpp  AudioProcessor.h  FrameDecoder.cpp  FrameDecoder.h  FrameEncoder.cpp  FrameEncoder.h  FrameReader.cpp  FrameReader.h  Resampler.cpp  Resampler.h  UdpServer.cpp  UdpServer.h  main.cpp  udp_server_main.cpp
